--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -17,12 +17,10 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recipeListView"
+        android:layout_height="match_parent"
         android:layout_below="@+id/searchTextView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:id="@+id/recyclerView"/>
 
 </RelativeLayout>
