update imageview id to correctly display recipe detail fragments with pager

--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            android:id="@+id/restaurantImageView"
+            android:id="@+id/recipeImageView"
             android:src="@drawable/vegetablebasket"
             android:scaleType="centerCrop" />
 
