--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -68,7 +68,7 @@
                     android:gravity="center" />
 
                 <ListView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/ingredientListView"
                     android:layout_below="@+id/websiteTextView"
